--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/avinashpanchal123/TODO-app#readme",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "ejs": "^3.1.6",
     "express": "^4.17.3"
   }
 }
